# redis-atomic-module

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README-CN.md  README.md  incr_ext.patch
src/: atomic.c  atomic.h
tests/: atomic.tcl
